# open-agent

./: .env.example  .gitignore  ADAPTER_IMPORTS_UPDATE.md  AGENTS.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DESIGN_ANALYSIS.md  ARCHITECTURE_RATIONALIZATION_ANALYSIS.md  ARCHITECTURE_REDESIGN_PROPOSAL.md  ARCHITECTURE_REFACTOR_SUMMARY.md  BUILD_GRAPH_IMPLEMENTATION_GUIDE.md  CACHE_KEY_GENERATOR_MIGRATION.md  CHECKPOINT_THREAD_MIGRATION_SUMMARY.md  CIRCULAR_DEPENDENCY_ANALYSIS.md  CLI_MIGRATION_SUMMARY.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS.md  CONFIG_MANAGER_MIGRATION_CHECKLIST.md  CONFIG_REFACTOR_SUMMARY.md  CONFIG_SERVICE_ARCHITECTURE_ANALYSIS.md  CORE_EXCEPTIONS_MIGRATION_ANALYSIS.md  CORE_LAYER_ARCHITECTURE_REDESIGN.md  CORE_LAYER_FIXES_LIST.md  FLEXIBLE_CONTEXT_CONTROL.md  FUNCTION_ARCHITECTURE_REDESIGN_SUMMARY.md  Graph与Workflow解耦总结.md  IMPORT_PATH_FIXES_SUMMARY.md  IMPORT_REFERENCE.md  INFRASTRUCTURE_MIGRATION_ANALYSIS.md  INFRASTRUCTURE_MIGRATION_SUMMARY.md  INTERFACE_CONSOLIDATION_ANALYSIS.md  MONITORING_MIGRATION_ANALYSIS.md  MONITORING_STORAGE_ANALYSIS.md  NEW_ARCHITECTURE_DESIGN.md  NODES_REFACTOR_SUMMARY.md  NODES_SYNC_ASYNC_ANALYSIS.md  NODE_CONTEXT_PASSING.md  QWEN.md  README.md  REDACTOR_IMPROVEMENT_SUMMARY.md  REGISTRY_ANALYSIS.md  REPOSITORY_EXCEPTION_ANALYSIS.md  (+194 more)
.roo/rules/: rules.md
.trae/rules/: project_rules.md
configs/: application.yaml  global.yaml  history.yaml  monitoring.yaml  monitoring_logging.yaml  prompts.yaml  state.yaml  state_management.yaml  storage.yaml  storage_example.yaml  threads.yaml  workflow_services.yaml
configs/agents/: _group.yaml  advanced.yaml  data_analyst.yaml  (+1 more)
demo/: demo_comprehensive_performance.py  demo_config_inheritance.py  demo_config_simple.py  demo_enhanced_features_direct.py  demo_enhanced_features_standalone.py  demo_enhanced_optimizations.py  demo_enhanced_optimizations_simple.py  demo_infrastructure.py  demo_logger.py  demo_performance_test.py  demo_prompt_management.py  demo_simple_performance.py  demo_state_serialization_performance.py  demo_tool_system.py  demo_workflow_system.py
docs/: LOGGER_MIGRATION.md  STORAGE_MIGRATION.md  THREADS_MIGRATION_PLAN.md  THREAD_CHECKPOINT_QUICK_START.md  TUI开发完成总结.md  TUI测试.txt  TUI调试日志使用指南.md  UNIFIED_LOGGING_SYSTEM.md  WORKFLOW_ARCHITECTURE_REFACTORING.md  async_decorator_removal_summary.md  async_migration_plan.md  async_programming_guidelines.md  cache_architecture_design.md  cache_migration_completed.md  checkpoint_configuration.md  config_api.md  config_loading_workflow_analysis.md  config_refactoring_execution_guide.md  config_refactoring_plan.md  config_refactoring_summary.md  config_system_guide.md  config_workflow_diagrams.md  container_refactor_summary.md  container_refactoring_summary.md  core_directory_analysis.md  edge-operations-logic-analysis.md  element-builder-factory-usage.md  final_config_architecture_proposal.md  gemini_cache_fix_summary.md  hook_architecture_refactoring_complete.md  infrastructure_migration_analysis.md  iteration_management_guide.md  langgraph_sdk功能说明.md  llm-short-term-improvements-summary.md  llm_clients_enhancement_summary.md  llm_dependency_refactoring_plan.md  llm_task_group_implementation_summary.md  llm_wrapper_implementation_summary.md  message_system_migration_guide.md  monitoring_triggers_guide.md  (+17 more)
examples/: README.md  __init__.py  agent_factory_demo.py  assembly_example.py  build_graph_example.py  color_logger_example.py  config_integration_example.py  config_usage_example.py  deep_thinking_workflow_config.yaml  enhanced_token_counter_example.py  error_handling_demo.py  graph_workflow_examples.py  hooks_usage_example.py  human_relay_example.py  iteration_management_example.py  llm_enhanced_features_demo.py  llm_example.py  llm_task_group_usage_example.py  llm_wrapper_usage_example.py  plan_execute_agent_workflow_example.py  prompt_workflow_usage_example.py  provider_config_usage_example.py  react_agent_workflow_example.py  run_workflow_from_config.py  run_workflow_from_config_updated.py  run_workflow_universal.py  simple_workflow_config.yaml  state_machine_workflow_validation.py  thread_session_example.py  thread_session_refactored_example.py  tool_validation_example.py  validate_workflow_example.py  workflow_architecture_example.py
history/: test_session.json
langgraph/: __init__.py
plans/: config_impl_refactoring_plan.md  container_layer_relationships.md  dependency_injection_new_architecture.md  dependency_injection_refactor_phases.md
scripts/: README_workflow_validation.md  WORKFLOW_VALIDATION_SUMMARY.md  convert_states_to_graph.py  migrate_llm_config.py  migrate_storage_architecture.py  rename_sessions.py  update_import_paths.py  update_workflow_imports.py  validate_all_workflows.py  validate_migration.py  validate_workflow_config.py
src/: __init__.py  app_config.py  bootstrap.py  run_tui.py
test_sessions/: 1f73e8b2-9c62-46dd-a74f-65d1c41f89d1.json  576ad5a0-b647-4924-b733-033bbe080356.json  react-251022-163452-43d3a0.json  react-251022-163452-cd609d.json
tests/: checkpoint_integration_test.py  conftest.py  test_checkpoint_refactor.py  test_config_migrator.py  test_config_processor_unification.py  test_config_system.py  test_container_integration.py  test_flexible_conditional_edge.py  test_flexible_graph_builder.py  test_jsonl_vs_structured_output.py  test_llm_integration.py  test_llm_node_tool_calling_config.py  test_llm_task_group_integration.py  test_llm_wrappers.py  test_message_refactor.py  test_monitoring_triggers.py  test_node_function_composition.py  test_processor_base_simple.py  test_route_functions.py  test_schema_generator.py  test_service_bindings.py  test_storage_adapter.py  test_storage_migration.py  test_task_group_config.py  test_tui_integration.py  test_ui_import.py  test_ui_message_system.py  test_unified_cache_config.py  test_unified_di_framework.py  test_workflow_architecture.py  test_workflow_refactoring.py  test_workflow_state_migration.py
web/: .env.development  .env.production  .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+3952 files in other folders)
