[project]
name = "modular-agent"
version = "0.1.0"
description = "A modular agent framework with configurable assets"
authors = [{ name = "Author Name", email = "author@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # 核心框架
    "langchain >= 0.1.0",
    "langgraph >= 0.1.0",
    # TUI界面
    "rich >= 13.9.4",
    "click >= 8.0.0",
    # 配置管理
    "pydantic >= 2.0.0",
    "python-dotenv >= 1.0.0",
    "pyyaml>=6.0.0",
    "watchdog>=3.0.0",
    # 依赖注入
    "dependency-injector >= 4.0.0",
    # HTTP客户端
    "requests >= 2.30.0",
    "aiohttp >= 3.8.0",
    # 版本控制
    "gitpython >= 3.1.0",
    # 日志处理
    "python-json-logger >= 2.0.0",
    # 模板引擎
    "Jinja2 >= 3.1.0",
    # Markdown处理
    "markdown >= 3.4.0",
    # 终端控制
    "blessed >= 1.20.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.142.1",
    "pytest-benchmark>=5.1.0",
    "types-pyyaml>=6.0.12.20250915",
    "flake8>=7.3.0",
    "psutil>=7.1.0",
    "langchain-openai>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-anthropic>=1.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "pytest-mock >= 3.10.0",
    "pytest-cov >= 4.0.0",
    "hypothesis >= 6.0.0",
    "pytest-benchmark >= 4.0.0",
]

dev = ["black >= 23.0.0", "isort >= 5.12.0", "flake8 >= 6.0.0", "mypy >= 1.0.0"]

[project.scripts]
agent = "src.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html:cov_html --cov-report=term"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
