[project]
name = "modular-agent"
version = "0.1.0"
description = "A modular agent framework with configurable assets"
authors = [{ name = "Author Name", email = "author@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # TUI界面
    "rich >= 13.9.4",
    "click >= 8.0.0",
    # 配置管理
    "pydantic >= 2.0.0",
    "python-dotenv >= 1.0.0",
    "pyyaml>=6.0.0",
    "watchdog>=3.0.0",
    # 依赖注入
    "dependency-injector >= 4.0.0",
    # HTTP客户端
    "requests >= 2.30.0",
    "aiohttp >= 3.8.0",
    # 版本控制
    "gitpython >= 3.1.0",
    # 日志处理
    "python-json-logger >= 2.0.0",
    # 模板引擎
    "Jinja2 >= 3.1.0",
    # Markdown处理
    "markdown >= 3.4.0",
    # 终端控制
    "blessed >= 1.20.0",
    "types-pyyaml>=6.0.12.20250915",
    "flake8>=7.3.0",
    "psutil>=7.1.0",
    "httpx>=0.28.1",
    "tiktoken>=0.12.0",
    "graphviz>=0.21",
    "tomli>=2.3.0",
    # FastAPI相关
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "unicorn>=2.1.4",
    "markdownify>=1.2.0",
    "readabilipy>=0.3.0",
    "protego>=0.5.0",
    "bs4>=0.0.2",
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "pytest-mock >= 3.10.0",
    "pytz>=2025.2",
    "mypy>=1.18.2",
    "cachetools>=6.2.1",
    "aiofiles>=25.1.0",
    "redis[hiredis]>=7.1.0",
]

[project.optional-dependencies]
test = [
    "pytest-cov >= 4.0.0",
    "hypothesis >= 6.0.0",
    "pytest-benchmark >= 4.0.0",
]

dev = ["black >= 23.0.0", "isort >= 5.12.0", "flake8 >= 6.0.0", "mypy >= 1.0.0"]

[project.scripts]
agent = "src.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["src*", "langchain*", "langgraph*"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--import-mode=importlib"
# addopts = "--cov=src --cov-report=html:cov_html --cov-report=term"用于启用覆盖率测试
asyncio_mode = "auto"
# 确保src目录在Python路径中
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
# 严格模式配置
warn_unused_ignores = true
warn_redundant_casts = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
show_error_context = true
# 针对特定包的配置
[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "graphviz"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "blessed.*"
ignore_missing_imports = true
